Revert "style: fix Find Your Path orbiting star cut off on the edge"
This reverts commit 5452b8e96069c5be12fcebcdacf56138196ee8a9.

--- a/stp-frontend/src/css/StudentPortalStyles/OrbitingStarButton.css
+++ b/stp-frontend/src/css/StudentPortalStyles/OrbitingStarButton.css
@@ -1,8 +1,8 @@
 .orbit-button-container {
-  position: absolute;
+  position: relative;
   display: block;
-  width: 140px;
-  height: 38px;
+  width: 100%;
+  height: 100%;
   text-decoration: none;
   cursor: pointer;
   transition: transform 0.3s ease;
@@ -21,14 +21,13 @@
   height: 100%;
   min-width: 120px;
   min-height: 30px;
-  overflow: visible;
 }
 
 .container-orbit canvas {
   position: absolute;
   top: 0;
-  left: -30px;
-  width: calc(100% + 60px);
+  left: 0;
+  width: 100%;
   height: 100%;
   z-index: 1;
 }
